fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,6 @@ body {
 }
 
 .custom-scrollbar {
-  overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
   transition: all 0.1s;
